# Livox-SDK2

./: .clang-format  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  build.sh  package.xml
include/: livox_lidar_api.h  livox_lidar_def.h
sample/livox_lidar_quick_start/: README_for_config.md
samples/: CMakeLists.txt
samples/debug_point_cloud/: CMakeLists.txt  hap_config.json  main.cpp  mid360_config.json  mid360s_config.json
samples/lidar_cmd_observer/: CMakeLists.txt  hap_config.json  main.cpp
samples/livox_lidar_quick_start/: CMakeLists.txt  config.json  main.cpp  mid360s_config.json
samples/livox_lidar_rmc_time_sync/: CMakeLists.txt  main.cpp  synchro.h
samples/livox_lidar_rmc_time_sync/linux/: synchro.cpp
samples/livox_lidar_rmc_time_sync/win/: synchro.cpp
samples/logger/: CMakeLists.txt  config.json  hap_config.json  main.cpp  mid360_config.json  mid360s_config.json
samples/multi_lidars_upgrade/: CMakeLists.txt  config.json  main.cpp  mid360s_config.json
sdk_core/: CMakeLists.txt  CMakeLists.txt.lixiang  device_manager.cpp  device_manager.h  livox_lidar_sdk.cpp  params_check.cpp  params_check.h  parse_cfg_file.cpp  parse_cfg_file.h  upgrade_manager.cpp  upgrade_manager.h
sdk_core/base/: command_callback.h  io_loop.cpp  io_loop.h  io_thread.cpp  io_thread.h  logging.cpp  logging.h  noncopyable.h  thread_base.cpp  thread_base.h
sdk_core/base/multiple_io/: multiple_io_base.cpp  multiple_io_base.h  multiple_io_epoll.cpp  multiple_io_epoll.h  multiple_io_factory.h  multiple_io_kqueue.cpp  multiple_io_kqueue.h  multiple_io_poll.cpp  multiple_io_poll.h  multiple_io_select.cpp  multiple_io_select.h
sdk_core/base/network/: network_util.h
sdk_core/base/network/unix/: network_util.cpp
sdk_core/base/network/win/: network_util.cpp
sdk_core/base/wake_up/: wake_up_pipe.h
sdk_core/base/wake_up/unix/: wake_up_pipe.cpp
sdk_core/base/wake_up/win/: wake_up_pipe.cpp
sdk_core/comm/: comm_port.cpp  comm_port.h  define.h  generate_seq.cpp  generate_seq.h  protocol.h  sdk_protocol.cpp  sdk_protocol.h
sdk_core/comm/CRC/: Crc.cpp  Crc.h  Crc_Cfg.cpp  Crc_Cfg.h
sdk_core/command_handler/: build_request.cpp  build_request.h  command_handler.h  command_impl.cpp  command_impl.h  general_command_handler.cpp  general_command_handler.h  hap_command_handler.cpp  hap_command_handler.h  mid360_command_handler.cpp  mid360_command_handler.h  mid360s_command_handler.cpp  mid360s_command_handler.h  pa_command_handler.cpp  pa_command_handler.h  parse_lidar_state_info.cpp  parse_lidar_state_info.h
sdk_core/data_handler/: data_handler.cpp  data_handler.h
sdk_core/debug_point_cloud_handler/: debug_point_cloud_handler.cpp  debug_point_cloud_handler.h  debug_point_cloud_manager.cpp  debug_point_cloud_manager.h
sdk_core/include/: livox_lidar_def.h
sdk_core/logger_handler/: file_manager.cpp  file_manager.h  logger_handler.cpp  logger_handler.h  logger_manager.cpp  logger_manager.h
sdk_core/upgrade/: firmware.cpp  firmware.h  livox_lidar_upgrader.cpp  livox_lidar_upgrader.h
